--- a/parallel_bitcoin_hash/parallel_bitcoin_hash.qsf
+++ b/parallel_bitcoin_hash/parallel_bitcoin_hash.qsf
@@ -19,14 +19,14 @@
 #
 # Quartus Prime
 # Version 20.1.0 Build 711 06/05/2020 SJ Lite Edition
-# Date created = 14:51:52  June 02, 2023
+# Date created = 17:51:36  June 08, 2023
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		bitcoin_hash_assignment_defaults.qdf
+#		parallel_bitcoin_hash_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -39,12 +39,13 @@
 
 set_global_assignment -name FAMILY "Arria II GX"
 set_global_assignment -name DEVICE EP2AGX45DF29I5
-set_global_assignment -name TOP_LEVEL_ENTITY bitcoin_hash
+set_global_assignment -name TOP_LEVEL_ENTITY parallel_bitcoin_hash
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:51:52  JUNE 02, 2023"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:51:36  JUNE 08, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
-set_global_assignment -name SYSTEMVERILOG_FILE tb_bitcoin_hash.sv
-set_global_assignment -name SYSTEMVERILOG_FILE bitcoin_hash.sv
+set_global_assignment -name SYSTEMVERILOG_FILE tb_parallel_bitcoin_hash.sv
+set_global_assignment -name SYSTEMVERILOG_FILE simplified_sha256.sv
+set_global_assignment -name SYSTEMVERILOG_FILE parallel_bitcoin_hash.sv
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 100
@@ -56,12 +57,7 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
-set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name SYSTEMVERILOG_FILE simplified_sha256.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
