--- a/bitcoin_hash/bitcoin_hash.qsf
+++ b/bitcoin_hash/bitcoin_hash.qsf
@@ -64,4 +64,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE simplified_sha256.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name HDL_MESSAGE_LEVEL LEVEL2
+set_global_assignment -name ENABLE_DRC_SETTINGS ON
+set_global_assignment -name ENABLE_LOGIC_ANALYZER_INTERFACE OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
